--- a/server-data/spigot.yml
+++ b/server-data/spigot.yml
@@ -16,7 +16,7 @@ settings:
   sample-count: 12
   player-shuffle: 0
   user-cache-size: 1000
-  save-user-cache-on-stop-only: false
+  save-user-cache-on-stop-only: true
   moved-wrongly-threshold: 0.0625
   moved-too-quickly-multiplier: 10.0
   timeout-time: 60
@@ -73,8 +73,8 @@ world-settings:
       sweetberry-modifier: 100
       kelp-modifier: 100
     merge-radius:
-      exp: 3.0
-      item: 2.5
+      exp: 6.0
+      item: 4.0
     mob-spawn-range: 6
     hunger:
       jump-walk-exhaustion: 0.05
@@ -86,14 +86,14 @@ world-settings:
       other-multiplier: 0.0
     max-tnt-per-tick: 100
     max-tick-time:
-      tile: 50
-      entity: 50
+      tile: 1000
+      entity: 1000
     entity-activation-range:
-      animals: 32
-      monsters: 32
+      animals: 16
+      monsters: 24
       raiders: 48
-      misc: 16
-      tick-inactive-villagers: true
+      misc: 8
+      tick-inactive-villagers: false
       ignore-spectators: false
     entity-tracking-range:
       players: 48
@@ -129,10 +129,10 @@ world-settings:
     enable-zombie-pigmen-portal-spawns: true
     wither-spawn-sound-radius: 0
     hanging-tick-frequency: 100
-    arrow-despawn-rate: 1200
+    arrow-despawn-rate: 300
     trident-despawn-rate: 1200
     zombie-aggressive-towards-villager: true
-    nerf-spawner-mobs: false
+    nerf-spawner-mobs: true
     end-portal-sound-radius: 0
 advancements:
   disable-saving: false
