--- a/server-data/server.properties
+++ b/server-data/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Jul 11 17:27:50 UTC 2022
+#Tue Jul 19 13:58:00 UTC 2022
 enable-jmx-monitoring=false
 level-seed=
 rcon.port=25575
@@ -9,7 +9,7 @@ enable-query=false
 generator-settings={}
 enforce-secure-profile=false
 level-name=world
-motd=A Spigot Minecraft Server powered by Docker
+motd=A Fabric Minecraft Server powered by Docker
 query.port=25565
 texture-pack=
 pvp=true
