update server config

--- a/server-data/server.properties
+++ b/server-data/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Jul 19 13:58:00 UTC 2022
+#Tue Jul 19 14:35:47 UTC 2022
 enable-jmx-monitoring=false
 level-seed=
 rcon.port=25575
@@ -9,7 +9,7 @@ enable-query=false
 generator-settings={}
 enforce-secure-profile=false
 level-name=world
-motd=A Fabric Minecraft Server powered by Docker
+motd=Welcome to Survival Server\!
 query.port=25565
 texture-pack=
 pvp=true
@@ -25,7 +25,7 @@ online-mode=true
 enable-status=true
 allow-flight=false
 broadcast-rcon-to-ops=true
-view-distance=4
+view-distance=6
 max-build-height=256
 server-ip=
 resource-pack-prompt=
